# prism

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
benches/: queue_benchmarks.rs
docker/: Dockerfile  build.sh
prism_client/: Cargo.toml
prism_client/src/: lib.rs  main.rs
prism_python_client/: Cargo.toml  pyproject.toml
prism_python_client/src/: lib.rs
prism_schema/: Cargo.toml
prism_schema/schema/: pubsub.capnp
prism_schema/src/: lib.rs
prism_server/: Cargo.toml  build.rs
prism_server/benches/: queue_benchmarks.rs
prism_server/src/: beam.rs  exchange.rs  lib.rs  main.rs  queue.rs  router.rs  util.rs  web.rs
prism_util/: Cargo.toml
prism_util/src/: lib.rs  router.rs
src/: lib.rs  queue.rs
