[package]
name = "prism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_cbor = "0.11.2"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tempfile = "3.8.1"

[[bench]]
name = "queue_benchmarks"
harness = false
