[package]
name = "prism_server"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.18"
capnp-futures = "0.18.2"
chrono = { version = "0.4.31", features = ["serde"] }
crc32fast = "1.3.2"
futures-util = { version = "0.3.29", features = ["tokio-io"] }
log = "0.4.20"
rustls = "0.21.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
tokio = { version = "1.34.0", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-tungstenite = { version = "0.20.1", features = ["rustls"] }
tokio-util = { version = "0.7.10", features = ["compat"] }

prism_schema = { path = "../prism_schema" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tempfile = "3.8.1"

[[bench]]
name = "queue_benchmarks"
harness = false
