[package]
name = "prism_server"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.18"
capnp-futures = "0.18.2"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.14", features = ["derive"] }
crc32fast = "1.3.2"
futures-util = { version = "0.3.29", features = ["tokio-io"] }
prism_schema = { path = "../prism_schema" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
bytes = "1.5.0"
globset = "0.4.14"
async-recursion = "1.0.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
warp = { version = "0.3.6", features = ["tls", "websocket"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tempfile = "3.8.1"

[[bench]]
name = "queue_benchmarks"
harness = false
